Fixed backrground for date Window border redesigned default user avatar with cancel button (not implemented backend)

--- a/Client/UserControls/ChatItem.xaml
+++ b/Client/UserControls/ChatItem.xaml
@@ -11,6 +11,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/WindowResources/ChatsDictionary.xaml"/>
+                <ResourceDictionary Source="/WindowResources/ThemeDictionary.xaml"/>
             </ResourceDictionary.MergedDictionaries>
 
             <Storyboard x:Key="WrtingStoryboard">
@@ -96,9 +97,9 @@
 
         <UC:LightBulb Grid.RowSpan="2" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="-10" Visibility="{Binding ElementName=ui, Path=IsOnlineVisibility}" IsOn="{Binding ElementName=ui, Path=IsOnline}"/>
 
-        <TextBlock Text="{Binding Path=UserName, ElementName=ui}" FontSize="{Binding ElementName=ui, Path=UserNameFontSize}" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0" FontWeight="DemiBold"/>
+        <TextBlock Text="{Binding Path=UserName, ElementName=ui}" FontSize="{Binding ElementName=ui, Path=UserNameFontSize}" Foreground="{StaticResource ChatForeground}" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="15,0,0,0" FontWeight="DemiBold"/>
 
-        <ContentControl Grid.Row="1" Grid.Column="1" Content="{Binding Path=Description, ElementName=ui}" ContentTemplate="{Binding ElementName=ui, Path=DescriptionDataTemplate}" ContentTemplateSelector="{Binding ElementName=ui, Path=DescriptionDataTemplateSelector}" Margin="10,0,0,0"/>
+        <ContentControl Grid.Row="1" Grid.Column="1" Content="{Binding Path=Description, ElementName=ui}" ContentTemplate="{Binding ElementName=ui, Path=DescriptionDataTemplate}" ContentTemplateSelector="{Binding ElementName=ui, Path=DescriptionDataTemplateSelector}" Margin="15,0,0,0"/>
     </Grid>
 
     <UserControl.Triggers>
