--- a/Client/Views/ChatUC.xaml
+++ b/Client/Views/ChatUC.xaml
@@ -62,7 +62,9 @@
         </Grid.RowDefinitions>
 
         <DockPanel LastChildFill="False" Background="{StaticResource MainBackground2}">
-            <Image  DockPanel.Dock="Right" Style="{StaticResource AvatarImageStyle}"/>
+            <TextBlock DockPanel.Dock="Left" Margin="20,0,0,0" Text="{Binding Path=Chat.UserIsWriting}" FontSize="30" Foreground="{StaticResource WritingForeground}"/>
+
+            <Image DockPanel.Dock="Right" Style="{StaticResource AvatarImageStyle}"/>
             <Button IsEnabled="{Binding Path=Chat.CanWrite}" DockPanel.Dock="Right" Content="Edit chat" Margin="5" Background="{StaticResource ButtonBackground}" Command="{Binding EditChatCommand}">
                 <Button.Style>
                     <Style BasedOn="{StaticResource ButtonStyle}" TargetType="Button">
@@ -123,31 +125,11 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <TextBlock Grid.Row="0" Grid.Column="0" Text="{Binding Path=Chat.UserIsWriting}" FontSize="25" Panel.ZIndex="1" Margin="0,-41,20,70"/>
-
-            <!--<TextBox Grid.Column="0"
-                     IsEnabled="{Binding Path=Chat.CanWrite}"
-                     Text="{Binding MessageText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                     Style="{StaticResource InputTextBoxStyle}">
-                <TextBox.InputBindings>
-                    <KeyBinding Key="Enter" Command="{Binding TextBox_EnterPressedCommand}"/>
-                </TextBox.InputBindings>
-                <i:Interaction.Triggers>
-                    <i:EventTrigger EventName="KeyDown">
-                        <i:InvokeCommandAction Command="{Binding TextBox_KeyDownCommand}"/>
-                    </i:EventTrigger>
-                    <i:EventTrigger EventName="KeyUp">
-                        <i:InvokeCommandAction Command="{Binding TextBox_KeyUpCommand}"/>
-                    </i:EventTrigger>
-                </i:Interaction.Triggers>
-            </TextBox>-->
-
             <ContentControl IsEnabled="{Binding Path=Chat.CanWrite}"
                             Content="{Binding Path=InputMessage}"
                             ContentTemplateSelector="{StaticResource InputMessageTemplateSelector}"/>
 
             <Button Grid.Column="1" Content="File" FontSize="20" IsEnabled="{Binding Path=Chat.CanWrite}" Background="{StaticResource ButtonBackground}" Command="{Binding OpenFileCommand}"/>
-            <!--<Button IsEnabled="{Binding Path=Chat.CanWrite}" Grid.Column="3" Content="Send" FontSize="20" Background="{StaticResource ButtonBackground}" Command="{Binding SendCommand}"/>-->
         </Grid>
     </Grid>
 
