--- a/Client/Views/SettingsUC.xaml
+++ b/Client/Views/SettingsUC.xaml
@@ -84,8 +84,8 @@
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
 
-                <Button Grid.Column="0" Content="Default wallpapers" Command="{Binding DefaultWallpaperShowCommand}" Style="{StaticResource ButtonStyle}"/>
-                <Button Grid.Column="1" Content="Select from device" Command="{Binding DeviceWallpaperShowCommand}" Style="{StaticResource ButtonStyle}"/>
+                <Button Grid.Column="0" Content="Default wallpapers" Command="{Binding DefaultWallpaperShowCommand}" Style="{StaticResource ButtonSettingsStyle}"/>
+                <Button Grid.Column="1" Content="Select from device" Command="{Binding DeviceWallpaperShowCommand}" Style="{StaticResource ButtonSettingsStyle}"/>
             </Grid>
 
             <TextBlock Grid.Row="6" Text="Notify rington" Style="{StaticResource HeaderStyle}"/>
@@ -108,9 +108,9 @@
                 </StackPanel>
 
                 <TextBlock Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="Choose notify rington" Style="{StaticResource TextStyle}"/>
-                <Button Grid.Column="1" Grid.Row="1" Content="Default ringtons" Style="{StaticResource ButtonStyle}" Command="{Binding DefaultRingtonShowCommand}"/>
+                <Button Grid.Column="1" Grid.Row="1" Content="Default ringtons" Style="{StaticResource ButtonSettingsStyle}" Command="{Binding DefaultRingtonShowCommand}"/>
 
-                <Button Grid.Column="2" Grid.Row="1" Content="Select from device" Style="{StaticResource ButtonStyle}" Command="{Binding DeviceRingtonShowCommand}"/>
+                <Button Grid.Column="2" Grid.Row="1" Content="Select from device" Style="{StaticResource ButtonSettingsStyle}" Command="{Binding DeviceRingtonShowCommand}"/>
             </Grid>
 
             <TextBlock Grid.Row="8" Text="About" Style="{StaticResource HeaderStyle}"/>
