--- a/Client/WindowResources/SettingsResources.xaml
+++ b/Client/WindowResources/SettingsResources.xaml
@@ -12,7 +12,7 @@
         <Setter Property="FontWeight" Value="Bold"/>
     </Style>
 
-    <Style x:Key="ButtonStyle" BasedOn="{StaticResource ButtonStyle}" TargetType="Button">
+    <Style x:Key="ButtonSettingsStyle" BasedOn="{StaticResource ButtonStyle}" TargetType="Button">
         <Setter Property="Height" Value="40"/>
         <Setter Property="MinWidth" Value="120"/>
         <Setter Property="MaxWidth" Value="300"/>
