--- a/Client/WindowResources/ThemeDictionary.xaml
+++ b/Client/WindowResources/ThemeDictionary.xaml
@@ -1,8 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <SolidColorBrush x:Key="ButtonBackground" Color="#57394a"/>
-    <SolidColorBrush x:Key="HamburgerBackground" Color="#b2481b"/>
+    <SolidColorBrush x:Key="ChatForeground" Color="#eab586"/>
+    <SolidColorBrush x:Key="HamburgerBackground" Color="#57394a"/>
     <SolidColorBrush x:Key="MainBackground2" Color="#eab586"/>
     <SolidColorBrush x:Key="SourceMessageBackground1" Color="#e0c2c0"/>
     <SolidColorBrush x:Key="MainBackground" Color="#dbb0a0"/>
@@ -10,7 +10,14 @@
     <SolidColorBrush x:Key="HeaderTextForeground" Color="#575339"/>
     <SolidColorBrush x:Key="SourceMessageBackground" Color="#b586ea"/>
     <SolidColorBrush x:Key="GroupBackground" Color="#86bbea"/>
-    <SolidColorBrush x:Key="ButtonForeground" Color="FloralWhite"/>
+    <SolidColorBrush x:Key="DateForeground" Color="#57394a"/>
+    <SolidColorBrush x:Key="WritingForeground" Color="#395753"/>
+
+    <SolidColorBrush x:Key="InputTextBoxBackground" Color="#e0c2c0"/>
+    <SolidColorBrush x:Key="InputTextBoxForeground" Color="#57394a"/>
+
+    <SolidColorBrush x:Key="ButtonBackground" Color="#57394a"/>
+    <SolidColorBrush x:Key="ButtonForeground" Color="#eab586"/>
 
     <Style x:Key="ButtonStyle" BasedOn="{StaticResource MahApps.Styles.Button}" TargetType="Button">
         <Setter Property="Background" Value="{StaticResource ButtonBackground}"/>
