--- a/Client/Views/PreviewWallpaperWindow.xaml
+++ b/Client/Views/PreviewWallpaperWindow.xaml
@@ -1,10 +1,11 @@
-﻿<Window x:Class="Client.Views.PreviewWallpaperWindow"
+﻿<metro:MetroWindow x:Class="Client.Views.PreviewWallpaperWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:metro="http://metro.mahapps.com/winfx/xaml/controls"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d"
-        Title="PreviewWallpaperWindow" Height="450" Width="800">
+        mc:Ignorable="d" 
+        Title="Wallpaper" Height="450" Width="800" WindowTitleBrush="#57394a">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -32,7 +33,7 @@
             </ListView.Background>
         </ListView>
 
-        
+
 
         <Button Grid.Row="1"
                 Content="Confirm wallpaper"
@@ -43,4 +44,4 @@
                 Command="{Binding ConfirmWallpaperCommand}">
         </Button>
     </Grid>
-</Window>
+</metro:MetroWindow>
