--- a/Client/Views/EntranceWindow.xaml
+++ b/Client/Views/EntranceWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Client.Views.EntranceWindow"
+﻿<Controls:MetroWindow x:Class="Client.Views.EntranceWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,7 +8,7 @@
         xmlns:uc="clr-namespace:Client.UserControls"
         xmlns:utility="clr-namespace:Client.Utility"
         mc:Ignorable="d"
-        Title="Entrance" Height="450" Width="350" ResizeMode="NoResize">
+        Title="Entrance" Height="450" Width="350" ResizeMode="NoResize" WindowTitleBrush="#57394a">
 
     <Window.Resources>
         <ResourceDictionary>
@@ -207,4 +207,4 @@
         <TextBlock Grid.Row="3" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Bottom" />
     </Grid>
 
-</Window>
+</Controls:MetroWindow>
